lldap/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: auth
  labels:
    app: lldap
    app.kubernetes.io/component: ldap
    app.kubernetes.io/name: lldap
    app.kubernetes.io/part-of: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
        app.kubernetes.io/component: ldap
        app.kubernetes.io/name: lldap
        app.kubernetes.io/part-of: auth
    spec:
      containers:
        - name: lldap
          image: lldap/lldap:latest
          ports:
            - containerPort: 3890
              name: ldap
            - containerPort: 17170
              name: http
          resources:
            requests:
              cpu: 20m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
